# spock

./: .gitignore  .gitmodules  .vercelignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  README.md  justfile  rust-toolchain.toml  vercel.json  vision.spock
.agents/skills/: README.md  spock-lang
.claude/: launch.json
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  governance.yml  implementation.yml  language-problem.yml  question.yml
.github/workflows/: ci.yml  npm.yml  uhura.yml  www.yml
crates/spock-cli/: Cargo.toml
crates/spock-cli/src/: lib.rs  main.rs  project_commands.rs  write_plan.rs
crates/spock-cli/src/provider_gen/: mod.rs  wire.pest
crates/spock-cli/tests/: cli.rs  provider_gen.rs
crates/spock-cli/tests/provider_fixtures/: contract.json  dispatch-switch.ts  instagram.wire  machine-types.uhura  play-assets.ts  snapshot-query.graphql  view-types.uhura
crates/spock-cli/tests/provider_runtime/: e2e.mjs  runtime-unit.mjs  runtime.mjs
crates/spock-host/: Cargo.toml
crates/spock-host/src/: assets.rs  backend_capture.rs  client.rs  client_route_admission.rs  events.rs  generation.rs  http.rs  lib.rs  named_state.rs  project.rs  routing.rs  server.rs
crates/spock-lang/: Cargo.toml
crates/spock-lang/src/: ast.rs  check.rs  ddl.rs  diag.rs  editor_tests.rs  ir.rs  lexer.rs  lib.rs  parser.rs  span.rs  typescript.rs
crates/spock-lang/tests/: vscode_grammar.rs
crates/spock-project/: Cargo.toml
crates/spock-project/src/: diagnostic.rs  discovery.rs  layout.rs  lib.rs  manifest.rs  path.rs  plan.rs  starter.rs
crates/spock-project/templates/minimal-client/: evidence.uhura  host.toml  machine.uhura  uhura.toml  ui.uhura
crates/spock-project/templates/minimal-client/app/home/: page.examples.uhura  page.uhura
crates/spock-project/templates/minimal-client/catalog/: base.toml
crates/spock-project/templates/minimal-client/fixtures/: empty.toml
crates/spock-project/templates/minimal-client/fixtures/scripts/: empty.toml
crates/spock-project/tests/: project_flow.rs
crates/spock-runtime/: Cargo.toml
crates/spock-runtime/src/: engine.rs  error.rs  filter.rs  func.rs  generation.rs  graphql.rs  http.rs  lib.rs  value.rs  write.rs
crates/spock-runtime/src/storage/: blob.rs  mod.rs  sign.rs
crates/spock-runtime/studio/: .gitignore  FEEDBACK.md  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
crates/spock-runtime/studio/src/: app.tsx  index.css  main.tsx  types.ts
crates/spock-runtime/studio/src/components/: doc.tsx  err-codes.tsx  file-thumb.tsx
crates/spock-runtime/studio/src/components/ui/: popover.tsx  sheet.tsx  textarea.tsx
crates/spock-runtime/studio/src/lib/: actor.ts  api.ts  app-context.ts  contract.ts  graphql-mutations.ts  query.ts  router.ts  storage.ts  theme.ts
crates/spock-runtime/studio/src/views/: fn-runner.tsx  functions-overview.tsx  insert-row-sheet.tsx  overview.tsx  record-view.tsx  storage-view.tsx  table-view.tsx  tables-overview.tsx
crates/spock-runtime/tests/: filter.rs  generation.rs  graphql.rs  http.rs  storage.rs
docs/: README.md  examples.md  status.md  uhura.md
docs/governance/: README.md  commonly-declined.md  design-principles.md  language-change-process.md  language-design-committee.md
docs/governance/meetings/: 0000-template.md  README.md
docs/language/: README.md  actor.md  derived-api.md  functions.md  seed.md  tables.md
docs/reference/: README.md  cli.md  errors.md  http.md  spock-toml.md
docs/rfd/: 0001-effects-once-extern.md  0002-day-one-concepts.md  0003-write-through-views.md  0004-exposure-model.md  0005-proving-ground.md  0006-language-identity-ir-first.md  0007-implementation-language.md  0008-v0-table-first.md  0009-roadmap.md  0010-client-codegen-architecture.md  0011-verification-line-taxonomy.md  0012-fn-v2.md  0013-value-constraints.md  0014-actor-seam.md  0015-studio.md  0016-doc-comments.md  0017-storage-research.md  0018-storage.md  0019-external-plane.md  0020-distribution.md  0021-filter.md  0022-spock-framework.md  0022-uhura-the-client-language.md  0023-development-state-reload.md  0024-error-declarations.md  README.md  TEMPLATE.md
docs/spec/: graphql.md  v0.md
docs/start/: README.md  install.md  quickstart.md  tutorial.md
docs/studies/: README.md  browser-wasm-runtime-feasibility.md  executable-service-topology-seed.md  view-design-candidate.md  view-problem-space.md
docs/working-groups/: README.md
docs/working-groups/0000-template/: CHARTER.md  FINAL-REPORT.md
editors/vscode/: README.md  language-configuration.json  package.json
editors/vscode-spock/: README.md  language-configuration.json  package.json
editors/vscode-spock/syntaxes/: spock.tmLanguage.json
editors/vscode/syntaxes/: spock.tmLanguage.json
editors/vscode/test/: corpus.spock
examples/: README.md
examples/filter-lab/: FEEDBACK.md  schema.spock
examples/instagram/: PRD.md  pg-rls.sql  pg.sql  v0-FEEDBACK.md  v0.spock  v1-FEEDBACK.md  v1.spock
examples/instagram-poc/: app.spock
examples/instagram/client/: .gitignore  README.md  codegen.ts  package-lock.json  package.json  tsconfig.json
examples/uber/: PRD.md  README.md
examples/uber/prd/: acceptance.md  driver.md  marketplace.md  money.md  operations.md  passenger.md  platform.md  sources.md
npm/: README.md  THIRD_PARTY_NOTICES.md  package.json
npm/scripts/: sidecar.mjs
scripts/: build-www-demo.sh  build-www.sh  check-doc-snippets.mjs  spock-uhura.sh
skills/: README.md
skills/spock-lang/: SKILL.md
skills/spock-lang/agents/: openai.yaml
skills/spock-lang/references/: language.md  limits.md  tooling.md  workflows.md
skills/uhura-lang/: SKILL.md
skills/uhura-lang/agents/: openai.yaml
skills/uhura-lang/references/: project-and-providers.md  source-language.md  tooling-and-limits.md  workflows.md
uhura/: README.md
www/: README.md  astro.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json
www/public/: robots.txt
www/scripts/: check-demo.mjs  smoke-www-demo.mjs
www/src/: content.config.ts
(+21 files in other folders)
