[workspace]
resolver = "2"
members = ["crates/spock-lang", "crates/spock-runtime", "crates/spock-cli"]

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/gridaco/spock"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
uuid = { version = "1", features = ["v7"] }
time = { version = "0.3", features = ["formatting", "parsing"] }
rusqlite = { version = "0.32", features = ["bundled"] }
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal"] }
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
assert_cmd = "2"
predicates = "3"
