[workspace]
resolver = "2"
members = ["crates/spock-lang", "crates/spock-runtime", "crates/spock-cli"]

[workspace.package]
version = "0.1.2"
edition = "2021"
rust-version = "1.89"
license = "MIT"
repository = "https://github.com/gridaco/spock"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
uuid = { version = "1", features = ["v7"] }
time = { version = "0.3", features = ["formatting", "parsing", "macros"] }
rusqlite = { version = "0.32", features = ["bundled", "functions"] }
axum = "0.8"
async-graphql = { version = "7", default-features = false, features = ["dynamic-schema", "graphiql"] }
async-graphql-value = "7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal", "time"] }
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
assert_cmd = "2"
predicates = "3"

# Release binaries are distributed over npm (RFD 0020); trim size without
# trading away SQLite throughput — keep opt-level at the default 3, since
# lowering it feeds a smaller -O to the cc-compiled bundled SQLite.
[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
panic = "abort"
