[package]
name = "spock-cli"
description = "The spock command: check, build, run"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "spock"
path = "src/main.rs"

[dependencies]
spock-lang = { path = "../spock-lang" }
spock-runtime = { path = "../spock-runtime" }
serde_json.workspace = true
clap.workspace = true
anyhow.workspace = true
tokio.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
