[package]
name = "spock-cli"
description = "The Spock framework, project, and language command"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "spock"
path = "src/main.rs"

[dependencies]
spock-lang = { path = "../spock-lang" }
spock-runtime = { path = "../spock-runtime" }
spock-project = { path = "../spock-project" }
spock-host = { path = "../spock-host" }
serde_json.workspace = true
clap.workspace = true
anyhow.workspace = true
tokio.workspace = true
thiserror.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true
