[package]
name = "spock-cli"
description = "The Spock framework, project, and language command"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true

[[bin]]
name = "spock"
path = "src/main.rs"

[dependencies]
pest = "2"
pest_derive = "2"
spock-lang = { path = "../spock-lang" }
spock-runtime = { path = "../spock-runtime" }
spock-project = { path = "../spock-project" }
spock-host = { path = "../spock-host" }
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
anyhow.workspace = true
tokio.workspace = true
thiserror.workspace = true

[target.'cfg(unix)'.dependencies]
rustix = { version = "1.1", features = ["fs"] }

[target.'cfg(windows)'.dependencies]
cap-fs-ext = "4.0.2"
cap-std = "4.0.2"
fs_at = "0.2.1"
same-file.workspace = true
windows-sys = { version = "0.61", features = ["Win32_Storage_FileSystem", "Wdk_Storage_FileSystem"] }

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true
