[package]
name = "spock-host"
description = "Project generation coordination and the combined Spock framework host"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
spock-lang = { path = "../spock-lang" }
spock-project = { path = "../spock-project" }
spock-runtime = { path = "../spock-runtime" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
axum.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
sha2.workspace = true
uhura-host = { path = "../../uhura/crates/uhura-host" }
tower-http = { version = "0.6", features = ["cors"] }

[dev-dependencies]
tempfile.workspace = true
reqwest.workspace = true
tower = { version = "0.5", features = ["util"] }
