[package]
name = "spock-host"
description = "Project generation coordination and the combined Spock framework host"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true

[dependencies]
spock-lang = { path = "../spock-lang" }
spock-project = { path = "../spock-project" }
spock-runtime = { path = "../spock-runtime" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
axum.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
sha2.workspace = true
unicode-normalization.workspace = true
uuid.workspace = true
uhura-host = { path = "../../uhura/crates/uhura-host" }
cap-fs-ext = "4.0.2"
cap-std = "4.0.2"

[target.'cfg(unix)'.dependencies]
rustix = { version = "1.1", features = ["fs"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Storage_FileSystem"] }

[dev-dependencies]
tempfile.workspace = true
reqwest.workspace = true
tower = { version = "0.5", features = ["util"] }
