[package]
name = "spock-lang"
description = "The Spock v0 language: lexer, parser, checker, contract IR, SQLite DDL and TypeScript emissions"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
time.workspace = true
