[package]
name = "spock-runtime"
description = "The Spock v0 runtime: embedded SQLite engine + HTTP surface over a compiled contract"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
spock-lang = { path = "../spock-lang" }
async-graphql.workspace = true
async-graphql-value.workspace = true
serde_json.workspace = true
rusqlite.workspace = true
axum.workspace = true
tokio.workspace = true
uuid.workspace = true
time.workspace = true
thiserror.workspace = true
# Embeds the compiled studio SPA (studio/dist) into the binary. `debug-embed`
# forces embedding in debug builds too, so `spock run` serves it from any cwd
# (matching the old include_str! behavior) — the console stays fully offline.
rust-embed = { version = "8", features = ["debug-embed", "mime-guess"] }

[dev-dependencies]
reqwest.workspace = true
