[package]
name = "spock-runtime"
description = "The Spock v0 runtime: embedded SQLite engine + HTTP surface over a compiled contract"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
spock-lang = { path = "../spock-lang" }
async-graphql.workspace = true
async-graphql-value.workspace = true
serde_json.workspace = true
rusqlite.workspace = true
axum.workspace = true
tokio.workspace = true
uuid.workspace = true
time.workspace = true
thiserror.workspace = true
# Storage byte plane (RFD 0018): native HMAC signed URLs. `sha2 = 0.10` pairs
# with `hmac`'s `digest 0.10`; `getrandom` mints the per-run signing secret.
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
getrandom = "0.2"
# content-type inference for `file("...")` seed assets (RFD 0018).
mime_guess = "2"
# Permissive CORS on the whole surface: v0 is the open dev tier bound to
# 127.0.0.1, and browser clients on another local origin must reach it.
tower-http = { version = "0.6", features = ["cors"] }
# Embeds the compiled studio SPA (studio/dist) into the binary. `debug-embed`
# forces embedding in debug builds too, so `spock run` serves it from any cwd
# (matching the old include_str! behavior) — the console stays fully offline.
rust-embed = { version = "8", features = ["debug-embed", "mime-guess"] }

[dev-dependencies]
reqwest.workspace = true
